--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,7 @@ install:
 
   - java -jar ./artifacts/app-order.jar &
   - chmod +x gradlew
-  - ./gradlew test --info -Dselenide.headless=true
+  - ./gradlew test --info -Selenide.headless=true
 
 build_script:
   - ./gradlew test --info
