--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,4 +16,4 @@ install:
 
 build_script:
   - ./gradlew test --info
-  - - ./gradlew test --info -Dselenide.headless=true
+  - ./gradlew test --info -Dselenide.headless=true
